--- a/250718_git command/index.html
+++ b/250718_git command/index.html
@@ -30,7 +30,7 @@
     <!-- Main Content -->
      <main>
         <div class="container mx-auto p-8">
-                <img src="/daily-todo/250719_practice/Banner_01.png" alt="" class="h-[500px] w-full max-w-full object-contain rounded-lg">
+                <img src="/daily-todo/250719_practice/Banner_01.png" alt="" class="h-[500px] w-full max-w-full  rounded-lg">
             
 
             
