--- a/250721_practice/index.html
+++ b/250721_practice/index.html
@@ -31,23 +31,26 @@
             </ul>
         </div>
         <div class="flex items-center p-2 gap-2">
-            <button class="border border-1 rounded-sm p-2 font-semibold hover:bg-gray-800 hover:text-white"> <span class="text-xl p-2">&#9733</span>My Avada</button>
+            <button class="border border-1 rounded-sm p-2 font-semibold hover:bg-black   hover:text-white"> <span class="text-xl p-2">&#9733</span>My Avada</button>
         </div>
     </nav>
 
 
     <!-- main content -->
     <main class="container mx-auto p-5">
-        <div class="flex items-center justify-center mb-8">
+        <div class="flex justify-center mb-8">
             <div>
             <h1 class="text-5xl md:text-5xl lg:text-5xl font-bold mb-4 text-gray-800 ">
                 The Ultimate Portfolio Website Builder
             </h1>
             <p class="text-gray-600 mb-8 text-lg md:text-xl lg:text-xl">
                 Trusted by beginners, marketers & professionals; Built with usability and performance in mind. </p>
+                <div class="flex items-center p-2 gap-2">
+            <button class="w-[300px] h-[70px] border border-1 rounded-sm p-2 font-semibold bg-gray-900 hover:bg-black text-white text-xl"> Start Designing <span class="text-xl p-2">&#8594</span></button>
+        </div>
         </div>
         <div>
-            <img src="/daily-todo/250721_practice/avada-homepage-hero-cta2.png" alt="" class="w-full max-w-full rounded-lg">
+            <img src="/daily-todo/250721_practice/avada-homepage-hero-cta2.png" alt="" class="w-full max-w-full object-cover overflow-hidden rounded-lg">
         </div>
         </div>
     </main> 
