--- a/250722_practice/index.html
+++ b/250722_practice/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4  bg-gray-300 mx-4 my-4 p-4">
+    <div class="bg-gray-200 p-4">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4  bg-gray-300 mx-4 my-4 p-4">
     <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> <h1 class="font-semibold text-gray-800"> Hybrid Structure</h1></div>
     <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> <h1 class="font-semibold text-gray-800"> Lifetime Free Updates</h1></div>
     <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> <h1 class="font-semibold text-gray-800"> 50+ Templates</h1></div>
@@ -16,5 +17,23 @@
     <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> <h1 class="font-semibold text-gray-800"> Best Selling Mailster Templates</h1></div>
     </div>
 
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 bg-gray-300 mx-4 my-4 p-4">
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 1 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+        <div class="bg-white rounded-lg shadow-md p-4 h-[80px] w-[300px] text-center"> card 2 </div>
+    </div>
+    <div class="flex  justify-between items-center bg-sky-300 mx-4 my-4 p-4">
+        <div class="bg-gray-300 mx-4 my-4 p-4">
+            <h1 class="text-center text-gray-800 font-semibold">This is a Tailwind CSS Example</h1>
+        </div>
+        <div class="bg-gray-300 mx-4 my-4 p-4">
+            <h1 class="text-center text-gray-800 font-semibold">This is a Tailwind CSS Example</h1>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
